--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -6,9 +6,24 @@
   .large-8.small-centered.columns.row
     .wrapper
       .about_content
-        =image_tag('about_logo.png')
         %h1 About Logo
-        %p Our logo is very special. As such we would like you to understand how we arrived at each element in out logo and what the deeper meaning behind each selection was a special quest that lead to answers most wonderful and true. check check one two three
+        %p Our logo is very special. As such we would like you to understand how we arrived at each element in out logo and what the deeper meaning behind each selection was a special quest that lead to answers most wonderful and true.
+
+        .row.grid
+          .small-4.columns.inner.sword
+          .small-4.columns.inner.bg
+          .small-4.columns.inner.sword
+          .small-4.columns.inner.unicorns
+          .small-4.columns.inner.x
+          .small-4.columns.inner.unicorns
+          .small-4.columns.inner.sword
+          .small-4.columns.inner.bg
+          .small-4.columns.inner.sword
+          .small-4-centered.columns.inner.ctent
+            .content
+              .sword_content The swords are to cut though the crap and get to the true source of knowledge. Plato believed that there is one true source for each thing existing in the physical world. Along those same lines roguemaps.com will help cut through the mountains of fake food and products to get to the true source. 
+              .bg_content The background and main shape and colors are borrowed directly from the U.S. freeway signs. To be honest America is a driving culture. The freeway system is what connects us physically to one another and helps us to get our jobs done and live our lives with the most ease possible in a car based society.
+          
         %h1 Our Company
         %p Rogue Maps is resource guide to connect consumers to sustainable products and businesses to sustainable raw materials. For example, consumers are able to locate restaurants with organic and non-gmo items on their menus by using roguemaps.com. Rogue Maps is also a resource for Restaurants and consumers to source ingredients from local and/or organic farms. 
         %p By listing suppliers and available ingredients of sustainable raw materials Rogue Maps encourages transparency as well as creates, accessibility for businesses to be more sustainable. Rogue Maps is both an app and a website. Although the initial focus is the Rogue Valley,  Rogue Maps is a global meeting place to access sustainability as a lifestyle for everyone.
