Updated scrolling on about, modified positions of .wrapper and .grid to fit correctly

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -19,7 +19,7 @@
           .small-4.columns.inner.sword
           .small-4.columns.inner.bg
           .small-4.columns.inner.sword
-          .small-4-centered.columns.inner.ctent
+          .small-4-centered.columns.inner
             .content
               .sword_content The swords are to cut though the crap and get to the true source of knowledge. Plato believed that there is one true source for each thing existing in the physical world. Along those same lines roguemaps.com will help cut through the mountains of fake food and products to get to the true source. 
               .bg_content The background and main shape and colors are borrowed directly from the U.S. freeway signs. To be honest America is a driving culture. The freeway system is what connects us physically to one another and helps us to get our jobs done and live our lives with the most ease possible in a car based society.
