--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -84,24 +84,14 @@ html, body
   
 .wrapper
   position: absolute
-  height: 44.59em
-  top: 0px
-  bottom: 0px
-  right: 0px
-  left: 0px
+  top: 0
   background: rgba(243, 248, 252, .85)
-  overflow-y: scroll
-  overflow-x: hidden
+
   
   
 .about_content
-  position: absolute
   height: 100%
-  top: 0px
-  bottom: 0px
-  right: 0px
-  left: 0px
-  overflow-y: scroll
+
 
   
   h2
@@ -117,10 +107,12 @@ html, body
     border: black solid 2px
     
   .grid
-    height: 80%
+    height: 580px
     width: 100%
+    margin: 0
     background: image_url('about_logo.png')
     background-position: center center
+    background-repeat: no-repeat
     border: red solid 2px
     .sword:hover ~ .ctent
       background: green
