Added coffee to run the interactive about logo. Added descriptions to logo elements

--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -113,7 +113,6 @@ html, body
     background: image_url('about_logo.png')
     background-position: center center
     background-repeat: no-repeat
-    border: red solid 2px
     .sword:hover ~ .ctent
       background: green
       display: block
@@ -124,10 +123,11 @@ html, body
       display: none
 
     .inner
-      border: green solid 2px
       height: 33.33%
-      .sword_content, .bg_content
+      .sword_content, .bg_content, .unicorns_content, .x_content
         display: none
+      .hover
+        display: block
 
 
 
