--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -7,7 +7,7 @@
     .wrapper
       .about_content
         %h1 About Logo
-        %p Our logo is very special. As such we would like you to understand how we arrived at each element in out logo and what the deeper meaning behind each selection was a special quest that lead to answers most wonderful and true.
+        %p Our logo is very special. As such we would like you to understand how we arrived at each element in out logo and the deeper meaning behind each selection. Mouseover any part of the image below to see a description of the targeted element in our logo. Yarr!
 
         .row.grid
           .small-4.columns.inner.sword
@@ -21,8 +21,18 @@
           .small-4.columns.inner.sword
           .small-4-centered.columns.inner
             .content
-              .sword_content The swords are to cut though the crap and get to the true source of knowledge. Plato believed that there is one true source for each thing existing in the physical world. Along those same lines roguemaps.com will help cut through the mountains of fake food and products to get to the true source. 
-              .bg_content The background and main shape and colors are borrowed directly from the U.S. freeway signs. To be honest America is a driving culture. The freeway system is what connects us physically to one another and helps us to get our jobs done and live our lives with the most ease possible in a car based society.
+              .sword_content 
+                %h1 YAR! Swords Can Cut It
+                %p The swords are to cut though the crap and get to the true source of knowledge. Plato believed that there is one true source for each thing existing in the physical world. Along those same lines roguemaps.com will help cut through the mountains of fake food and products to get to the true source. 
+              .bg_content 
+                %h1 Sail on the Highways
+                %p The background and main shape and colors are borrowed directly from the U.S. freeway signs. To be honest America is a driving culture. The freeway system is what connects us physically to one another and helps us to get our jobs done and live our lives with the most ease possible in a car based society.
+              .unicorns_content
+                %h1 There Blow the Unicorns!
+                %p We had to include unicorns because life is very magical.We chose to have two unicorns to express the duality of life and the human condition. The yin and yang of life. True in magic as in all layers of life.
+              .x_content
+                %h1 X Marks Thy Spot!
+                %p X marks the spot on any treasure map. We at Rogue Maps believe the sustainability and health are the greatest of all treasures.  Ultimately Rogue Maps is a treasure map leading you to the treasures of a healthy and sustainable lifestyle.
           
         %h1 Our Company
         %p Rogue Maps is resource guide to connect consumers to sustainable products and businesses to sustainable raw materials. For example, consumers are able to locate restaurants with organic and non-gmo items on their menus by using roguemaps.com. Rogue Maps is also a resource for Restaurants and consumers to source ingredients from local and/or organic farms. 
