removed default outline feature on chrome for the submit button

--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -11,6 +11,9 @@ html, body
   
 .head
   height: 100px
+  
+.submit
+  outline: none
 	
 .title-area
   display: inline
@@ -53,6 +56,7 @@ html, body
     .submit
       cursor: pointer
       height: 28px
+      outline: none
 
 .results > .columns
   padding: 0
@@ -81,19 +85,16 @@ html, body
   bottom: 0px
   right: 0px
   left: 0px
-  
+ 
+//Styles for About page 
 .wrapper
   position: absolute
   top: 0
   background: rgba(243, 248, 252, .85)
-
-  
-  
+ 
 .about_content
   height: 100%
 
-
-  
   h2
   text-align: center
   padding: 0 5px 0px 5px
