minor fixes and changes. worth keeping but not the be all end all

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -22,16 +22,16 @@
           .small-4-centered.columns.inner
             .content
               .sword_content 
-                %h1 YAR! Swords Can Cut It
+                %h1 Swords Cut It
                 %p The swords are to cut though the crap and get to the true source of knowledge. Plato believed that there is one true source for each thing existing in the physical world. Along those same lines roguemaps.com will help cut through the mountains of fake food and products to get to the true source. 
               .bg_content 
                 %h1 Sail on the Highways
                 %p The background and main shape and colors are borrowed directly from the U.S. freeway signs. To be honest America is a driving culture. The freeway system is what connects us physically to one another and helps us to get our jobs done and live our lives with the most ease possible in a car based society.
               .unicorns_content
-                %h1 There Blow the Unicorns!
+                %h1 Unicorns!
                 %p We had to include unicorns because life is very magical.We chose to have two unicorns to express the duality of life and the human condition. The yin and yang of life. True in magic as in all layers of life.
               .x_content
-                %h1 X Marks Thy Spot!
+                %h1 X Marks The Spot
                 %p X marks the spot on any treasure map. We at Rogue Maps believe the sustainability and health are the greatest of all treasures.  Ultimately Rogue Maps is a treasure map leading you to the treasures of a healthy and sustainable lifestyle.
           
         %h1 Our Company
