--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -5,25 +5,28 @@
 .results.row
   .row.wrapper
     .about_content
-      .large-8.columns
-        //hold logo and constructs for logo here
+      .large-12.small-centered.columns
         %h1 About Logo
         %p Our logo is very special. As such we would like you to understand how we arrived at each element in out logo and the deeper meaning behind each selection. Mouseover any part of the image below to see a description of the targeted element in our logo. Yarr!
+  .row.wrapper
+    .about_content
+      .large-8.columns
+        //hold logo and constructs for logo here
+        .logo_side
         
-        .row.grid
-          .small-4.columns.inner.sword
-          .small-4.columns.inner.bg
-          .small-4.columns.inner.sword
-          .small-5.columns.inner.unicorns
-          .small-2.columns.inner.x
-          .small-5.columns.inner.unicorns
-          .small-4.columns.inner.sword
-          .small-4.columns.inner.bg
-          .small-4.columns.inner.sword
-          .small-4-centered.columns.inner
+          .row.grid
+            .small-4.columns.inner.sword
+            .small-4.columns.inner.bg
+            .small-4.columns.inner.sword
+            .small-5.columns.inner.unicorns
+            .small-2.columns.inner.x
+            .small-5.columns.inner.unicorns
+            .small-4.columns.inner.sword
+            .small-4.columns.inner.bg
+            .small-4.columns.inner.sword
         
-      .large-4.columns
-        //holds the description section (hopefully next to the logo)
+      .large-4.columns.desc
+        //holds the description section
         .content
           .sword_content 
             %h1 Swords Cut It
@@ -39,7 +42,13 @@
             %p X marks the spot on any treasure map. We at Rogue Maps believe the sustainability and health are the greatest of all treasures.  Ultimately Rogue Maps is a treasure map leading you to the treasures of a healthy and sustainable lifestyle.
         
 
-        
+  .row
+    .large-8.small-centered.columns.company
+      .wrapper
+        .about_content
+          %h1 Our Company
+          %p Rogue Maps is resource guide to connect consumers to sustainable products and businesses to sustainable raw materials. For example, consumers are able to locate restaurants with organic and non-gmo items on their menus by using roguemaps.com. Rogue Maps is also a resource for Restaurants and consumers to source ingredients from local and/or organic farms. 
+          
         
 
 
