modified about page bg color around about logo.

--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -93,6 +93,9 @@ html, body
 .company
   position: relative
   top: -9px
+  p
+    padding-left: 10px
+    padding-right: 5px
  
 .about_content
   .logo_side
