--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -5,12 +5,12 @@
 .results.row
   .row.wrapper
     .about_content
-      .large-12.small-centered.columns
+      .large-12.columns.show-for-medium-up
         %h1 About Logo
         %p Our logo is very special. As such we would like you to understand how we arrived at each element in out logo and the deeper meaning behind each selection. Mouseover any part of the image below to see a description of the targeted element in our logo. Yarr!
   .row.wrapper
     .about_content
-      .large-8.columns
+      .large-8.columns.show-for-medium-up
         //hold logo and constructs for logo here
         .logo_side
         
@@ -25,7 +25,7 @@
             .small-4.columns.inner.bg
             .small-4.columns.inner.sword
         
-      .large-4.columns.desc
+      .large-4.columns.show-for-medium-up.desc
         //holds the description section
         .content
           .sword_content 
@@ -46,8 +46,10 @@
     .large-8.small-centered.columns.company
       .wrapper
         .about_content
-          %h1 Our Company
+          %h1 ARRR Company
           %p Rogue Maps is resource guide to connect consumers to sustainable products and businesses to sustainable raw materials. For example, consumers are able to locate restaurants with organic and non-gmo items on their menus by using roguemaps.com. Rogue Maps is also a resource for Restaurants and consumers to source ingredients from local and/or organic farms. 
+          %p By listing suppliers and available ingredients of sustainable raw materials Rogue Maps encourages transparency as well as creates, accessibility for businesses to be more sustainable. Rogue Maps is both an app and a website. Although the initial focus is the Rogue Valley,  Rogue Maps is a global meeting place to access sustainability as a lifestyle for everyone.
+          %p Everyone loves treasure and Pirates are considered the greatest treasure hunters. Rogue Maps is your guide to sustainable treasures. Our greatest treasure is our’s and the planet's well being and good health. Although sustainability as a lifestyle is gaining in popularity it is still somewhat of an “Alternative” lifestyle choice. Hence Rogue Maps is an off the beaten path, Pirate themed Treasure Map.
           
         
 
