Modified padding around top paragraph (about page), added header before logo description

--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -96,6 +96,10 @@ html, body
   p
     padding-left: 10px
     padding-right: 5px
+    
+.top_about
+  padding-left: 10px
+  padding-right: 10px
  
 .about_content
   .logo_side
@@ -124,6 +128,7 @@ html, body
 
     .inner
       height: 33.33%
+      
   .sword_content, .bg_content, .unicorns_content, .x_content
     display: none
   .hover
