--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -7,7 +7,8 @@
     .about_content
       .large-12.columns.show-for-medium-up
         %h1 About Logo
-        %p Our logo is very special. As such we would like you to understand how we arrived at each element in out logo and the deeper meaning behind each selection. Mouseover any part of the image below to see a description of the targeted element in our logo. Yarr!
+        .top_about
+          %p Our logo is very special. As such we would like you to understand how we arrived at each element in out logo and the deeper meaning behind each selection. Mouseover any part of the image below to see a description of the targeted element in our logo. Yarr!
   .row.wrapper
     .about_content
       .large-8.columns.show-for-medium-up
@@ -28,6 +29,8 @@
       .large-4.columns.show-for-medium-up.desc
         //holds the description section
         .content
+          %h1
+            Explaination
           .sword_content 
             %h1 Swords Cut It
             %p The swords are to cut though the crap and get to the true source of knowledge. Plato believed that there is one true source for each thing existing in the physical world. Along those same lines roguemaps.com will help cut through the mountains of fake food and products to get to the true source. 
@@ -46,7 +49,7 @@
     .large-8.small-centered.columns.company
       .wrapper
         .about_content
-          %h1 ARRR Company
+          %h1 ARRR Company!
           %p Rogue Maps is resource guide to connect consumers to sustainable products and businesses to sustainable raw materials. For example, consumers are able to locate restaurants with organic and non-gmo items on their menus by using roguemaps.com. Rogue Maps is also a resource for Restaurants and consumers to source ingredients from local and/or organic farms. 
           %p By listing suppliers and available ingredients of sustainable raw materials Rogue Maps encourages transparency as well as creates, accessibility for businesses to be more sustainable. Rogue Maps is both an app and a website. Although the initial focus is the Rogue Valley,  Rogue Maps is a global meeting place to access sustainability as a lifestyle for everyone.
           %p Everyone loves treasure and Pirates are considered the greatest treasure hunters. Rogue Maps is your guide to sustainable treasures. Our greatest treasure is our’s and the planet's well being and good health. Although sustainability as a lifestyle is gaining in popularity it is still somewhat of an “Alternative” lifestyle choice. Hence Rogue Maps is an off the beaten path, Pirate themed Treasure Map.
