added breakpoint, refactor css

--- a/app/assets/stylesheets/main/index.sass
+++ b/app/assets/stylesheets/main/index.sass
@@ -4,7 +4,8 @@
  * put site-wide variables before the imports and they will be accessible
  */
  
-@import compass/css3/border-radius
+@import compass
+@import breakpoint  
 
 // this imports the foundation mixins
 @import "foundation/foundation-global"
@@ -12,6 +13,8 @@
 $heading-font: 'Jim Nightshade'
 
 @import main
+@import head
+
 @import pages
 @import businesses
 
