--- a/app/assets/stylesheets/main/pages.css.sass
+++ b/app/assets/stylesheets/main/pages.css.sass
@@ -20,3 +20,53 @@
     .submit
       cursor: pointer
       height: 45px
+
+
+#pages-about
+
+  .wrapper
+    background: rgba(243, 248, 252, .85)
+
+  .company
+    position: relative
+    top: -9px
+    p
+      padding-left: 10px
+      padding-right: 5px
+      
+  .top_about
+    padding-left: 10px
+    padding-right: 10px
+   
+  .about_content
+    .logo_side
+      padding-left: 20px
+      background-color: rgba(0,0,0, .45)
+      overflow: hidden
+    
+    .desc
+      overflow: hidden
+      padding: 0px 40px 0
+      
+
+    h1, h2
+      text-align: center
+    p
+      text-align: left
+      text-indent: 50px
+      
+    .grid
+      height: 580px
+      width: 100%
+      margin: 0
+      background: image_url('about_logo.png')
+      background-position: center center
+      background-repeat: no-repeat
+
+      .inner
+        height: 33.33%
+        
+    .sword_content, .bg_content, .unicorns_content, .x_content
+      display: none
+    .hover
+      display: block
