added class to helper .show-for-medium-up

--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -2,7 +2,7 @@
 
 =render 'shared/head'
 
-.helper
+.helper.show-for-medium-up
 .main.row
   .large-8.small-centered.columns.row
     =form_tag search_businesses_path, class: 'search' do
