starting responsive menus

--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -29,12 +29,14 @@ body.businesses
   
   .tag-filter
     position: relative
-    left: 12%
+    float: right
     z-index: 10000
     width: 87%
-    height: 100px
+
     li
-      padding: 0
+      padding: 0 .5em
+      display: inline-block
+      float: right
 
   .business
     background: rgba(243, 248, 252, .65)
