--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -2,6 +2,7 @@
 
   %nav.top-bar{data: {topbar: true} }
     %ul.title-area
+      %li.name
       %li{:id => "logo"}
         =link_to image_tag('logo.png'), root_path, class: 'logo'
       %li{:id => "logo_txt"}
