--- a/app/views/shared/_search.html.haml
+++ b/app/views/shared/_search.html.haml
@@ -1,7 +1,7 @@
 =form_tag search_businesses_path, class: 'search' do
   =hidden_field_tag :filter_tags
 
-  %ul.middle
+  %ul.right
     %li
       =label_tag :location, 'Displaying:', class: 'inline right'
     %li
