--- a/app/assets/stylesheets/main/index.sass
+++ b/app/assets/stylesheets/main/index.sass
@@ -9,6 +9,7 @@
 
 // this imports the foundation mixins
 @import "foundation/foundation-global"
+@import "foundation/components/dropdown"
 
 $heading-font: 'Jim Nightshade'
 
