--- a/app/assets/stylesheets/main/head.css.sass
+++ b/app/assets/stylesheets/main/head.css.sass
@@ -1,12 +1,27 @@
 $top-padding: 8px  
 
-.top-bar
+nav
   padding-top: $top-padding
   overflow: visible
+  background: rgba(243,248,252,0.85)
+  height: 100px
+  margin-bottom: 6.25em
+
+  ul
+    margin-bottom: 0
+    list-style: none
+    line-height: 1.6
+
+  a
+    color: black
+    font-family: $heading-font
+    font-size: 26px
+
 .title-area
   display: inline
   margin-top: -$top-padding
   float: left
+
   .logo
     padding: 5px, 0px, 5px, 0px
     
@@ -25,29 +40,21 @@ $top-padding: 8px
       display: inline
 
 
-.top-bar-section 
-  +transition(none)
-  left: 0 !important
+.top-section 
+  float: right
   ul
-    background: none
-    width: auto
-    height: auto !important
     display: inline
-    clear: right
     li
-      float: left
-   
-  li a:not(.button)
-    background: none
-    line-height: 1
-    font-family: $heading-font
-    padding: 0 10px 0
-    &:hover
       background: none
+      line-height: 1
+      float: left    
+      padding: 0 10px 0
+      &:hover
+        background: none
 
 
   &.search
-    font-size: 18px
+    font-size: 16px
     ul
 
       +breakpoint(980px)
@@ -62,8 +69,8 @@ $top-padding: 8px
   
     label
       font-weight: bold
-      // padding-top: 10px
       padding: 0 0 0
+      line-height: 2em
     input
       top: 0px
       font-size: .875em
