--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -1,6 +1,6 @@
-.head.fixed
+.head
 
-  %nav.top-bar{data: {topbar: true} }
+  %nav
     %ul.title-area
       %li.name
       %li{:id => "logo"}
@@ -8,12 +8,12 @@
       %li{:id => "logo_txt"}
         Your Guide to Sustainable Treasures
 
-    %section.top-bar-section
+    %section.top-section
       %ul.right
         %li
           =link_to "About", "/pages/about"
         %li
           =mail_to "contact@roguemaps.com", "Contact"
           
-    %section.top-bar-section.search
+    %section.top-section.search
       =render 'shared/search'         
