--- a/app/views/businesses/search.html.haml
+++ b/app/views/businesses/search.html.haml
@@ -15,10 +15,10 @@
         .small-10.column
 
           %hgroup.row
-            .small-9.column
+            .large-9.column
               %h2
                 =link_to business.name, business_path(business), class: 'business-name'
-            .small-3.column
+            .large-3.column
               %h3= business.category
           .description= business.description
           .import_info
