--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -21,7 +21,7 @@ body.businesses
     background: $business_bg_color 
 
   .tag-filter-bg
-    background: rgba(0, 0, 0, .45)
+    background: rgba(0, 0, 0, .10)
     height: 35px
     width: 100%
     overflow: hidden
@@ -68,6 +68,11 @@ body.businesses
       line-height: 1.2
       margin: 0
       font-size: 1em
+
+    +breakpoint(0 640px)
+      & > .column
+        padding-left: 5px
+        padding-right: 5px
     
   .thumb
     width: 100%
