--- a/app/views/businesses/_tag_filter.html.haml
+++ b/app/views/businesses/_tag_filter.html.haml
@@ -1,7 +1,7 @@
 .tag-filter
 
   %form#tag-filter.custom
-    %a.filter-dropdown{href: "#", data: {dropdown: "filter-tags"}} Filters
+    %a.filter-dropdown.button{href: "#", data: {dropdown: "filter-tags"}} Filters
     %ul#filter-tags.large-12.columns{data: {dropdown: {content: true}}}
       -Tag.filterable.each do |tag|
         %li
