--- a/app/views/shared/_search.html.haml
+++ b/app/views/shared/_search.html.haml
@@ -1,4 +1,4 @@
-=form_tag search_businesses_path, class: 'search' do
+=form_tag search_businesses_path, method: 'get', class: 'search' do
   =hidden_field_tag :filter_tags
 
   %ul.right
