--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -13,7 +13,7 @@
         %li
           =link_to "About", "/pages/about"
         %li
-          =mail_to "contact@roguemaps.com", "Contact"
+          =mail_to "info@roguemaps.com", "Contact"
           
     %section.top-bar-section.search
       =render 'shared/search'         
