basic style to pagination

--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -41,3 +41,8 @@ html, body
   bottom: 0px
   right: 0px
   left: 0px
+
+.pagination
+  // style pagination here
+  text-align: center
+  margin-top: 20px
