responsive search fields in header

--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -46,6 +46,11 @@ body.businesses
       float: right
       +breakpoint(1100px)
         display: none
+      &.button
+        background: none
+        border: none
+        color: black
+        padding: 10px 13px
     +breakpoint(0px 1100px)
       #filter-tags
         +dropdown-container()
