--- a/app/views/shared/_search.html.haml
+++ b/app/views/shared/_search.html.haml
@@ -11,5 +11,5 @@
     %li
       =text_field_tag :location, @location, placeholder:'Where'
     
-    %li
+    %li.submit
       =image_submit_tag 'search_button.png', class: 'submit'
