--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -36,6 +36,8 @@ body.businesses
     float: right
     z-index: 11
     width: 87%
+    +breakpoint(0px 1100px)
+      width: 200px
     li
       padding: 0 .5em
       display: inline-block
@@ -54,6 +56,7 @@ body.businesses
     +breakpoint(0px 1100px)
       #filter-tags
         +dropdown-container()
+        width: 400px
         li
           +dropdown-style()
           display: block
