Just changed the mailto link on the head and some minor text in the about page

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -51,7 +51,7 @@
         .about_content
           %h1 ARRR Company!
           %p Rogue Maps is resource guide to connect consumers to sustainable products and businesses to sustainable raw materials. For example, consumers are able to locate restaurants with organic and non-gmo items on their menus by using roguemaps.com. Rogue Maps is also a resource for Restaurants and consumers to source ingredients from local and/or organic farms. 
-          %p By listing suppliers and available ingredients of sustainable raw materials Rogue Maps encourages transparency as well as creates, accessibility for businesses to be more sustainable. Rogue Maps is both an app and a website. Although the initial focus is the Rogue Valley,  Rogue Maps is a global meeting place to access sustainability as a lifestyle for everyone.
+          %p By listing suppliers and available ingredients of sustainable raw materials Rogue Maps encourages transparency as well as creates, accessibility for businesses to be more sustainable. Rogue Maps is both an app and a website. Although the initial focus is the Rogue Valley in Southern Oregon,  Rogue Maps is a global meeting place to access sustainability as a lifestyle for everyone.
           %p Everyone loves treasure and Pirates are considered the greatest treasure hunters. Rogue Maps is your guide to sustainable treasures. Our greatest treasure is our’s and the planet's well being and good health. Although sustainability as a lifestyle is gaining in popularity it is still somewhat of an “Alternative” lifestyle choice. Hence Rogue Maps is an off the beaten path, Pirate themed Treasure Map.
           
         
