--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -17,7 +17,7 @@
           %li
             =link_to "About", "/pages/about"
           %li
-            =mail_to "contact@roguemaps.com", "Contact"
+            =mail_to "info@roguemaps.com", "Contact"
           
     %section.top-section.search
       =render 'shared/search'         
