--- a/app/assets/stylesheets/main/pages.css.sass
+++ b/app/assets/stylesheets/main/pages.css.sass
@@ -10,9 +10,18 @@
       
   .main-container
     height: 100%
+    .disclaimer
+      background-color: #FFFFFF
+      padding: 5px
+      margin-bottom: 10px
+      border: 2px black solid
+      +border-radius(5px)
+      p
+        font-family: $heading-font
+        font-size: 1.5em
     
   .helper
-    height: 45%
+    height: 15%
     vertical-align: middle
     
   form.search
