--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -6,8 +6,8 @@
 .main.row
   .large-8.small-centered.columns.row
     .disclaimer
-      %p Ahoy!! Currently we be sailing in the Rogue Valley in Southern Oregon. Starting with Ashland Oregon, we be adding new businesses as we grow. 
-      %p As we be plotting the next course, we be swabbing the deck. So, if there's a local sustainable business that be missin, hail the crew via the <a href="mailto:info@roguemaps.com?Subject=Hailing%20the%20crew"><span style="color: red">Contact</span></a> link above. We'll do the rest. Arrr!
+      %p Ahoy!! Currently we arr sailing in the Rogue Valley in Southern Oregon. Begining with Ashland Oregon, we be adding new businesses as we grow. 
+      %p We arr plotting our course and swabbing the deck. If y'ad like t'e add a sustainable business, hail the crew via the <a href="mailto:info@roguemaps.com?Subject=Hailing%20the%20crew"><span style="color: red">Contact</span></a> link above.
   .large-8.small-centered.columns.row
     =form_tag search_businesses_path, method: 'get', class: 'search' do
       .large-5.columns
