--- a/app/assets/stylesheets/main/pages.css.sass
+++ b/app/assets/stylesheets/main/pages.css.sass
@@ -13,7 +13,9 @@
     .disclaimer
       background-color: #FFFFFF
       padding: 5px
-      margin-bottom: 10px
+      text-align: center
+      margin-bottom: 20px
+      margin-left: 15px
       border: 2px black solid
       +border-radius(5px)
       p
