Corrected spelling of Explanation About Page

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -30,7 +30,7 @@
         //holds the description section
         .content
           %h1
-            Explaination
+            Explanation
           .sword_content 
             %h1 Swords Cut It
             %p The swords are to cut though the crap and get to the true source of knowledge. Plato believed that there is one true source for each thing existing in the physical world. Along those same lines roguemaps.com will help cut through the mountains of fake food and products to get to the true source. 
