--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -15,6 +15,8 @@
       #main-menu{data: {dropdown: {content: true}}}
         %ul.right
           %li
+            %a{:href=>"https://www.indiegogo.com/projects/roguemaps-com-the-map-to-your-sustainable-treasure"} IndieGoGo
+          %li
             =link_to "About", "/pages/about"
           %li
             =mail_to "info@roguemaps.com", "Contact"
