--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -20,6 +20,8 @@
             =link_to "About", "/pages/about"
           %li
             =mail_to "info@roguemaps.com", "Contact"
+          %li
+            =link_to image_tag( 'facebook_32.png'), 'https://www.facebook.com/RogueMaps'
           
     %section.top-section.search
       =render 'shared/search'         
