Added the links to the disclaimer above search boxes

--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -7,6 +7,8 @@
 .main.row
   .large-8.small-centered.columns.row
     .disclaimer.show-for-medium-up.large-10
+      %h1 Support our campaign at <a href="https://www.indiegogo.com/projects/roguemaps-com-the-map-to-your-sustainable-treasure"><span style="color: red">IndieGoGo</span></a>
+      %p Also, Like our <a href="https://www.facebook.com/RogueMaps"><span style="color: red">Facebook page</span></a>
       %p Ahoy!!! Currently we arrr setting sail in the Rogue Valley in Southern Oregon. 
       %p Beginning in Ashland Oregon, we be adding new businesses as we grow. 
       %p We arrr plotting our course and swabbing the deck. If y'ad like t'e add a sustainable business, 
