--- a/app/assets/stylesheets/main/pages.css.sass
+++ b/app/assets/stylesheets/main/pages.css.sass
@@ -21,6 +21,18 @@
       p
         font-family: $heading-font
         font-size: 1.5em
+      .disclaim-footer
+        background-color: #000000
+        height: 2.5em
+        padding: 5px
+        margin: 0 -6px -6px -5px
+        color: #FFFFFF
+        span
+          color: red
+        a
+          color: #FFFFFF
+          font-family: $heading-font
+          font-size: 1.5em
     
   .helper
     height: 15%
