--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -7,13 +7,23 @@
 .main.row
   .large-8.small-centered.columns.row
     .disclaimer.show-for-medium-up.large-10
-      %h1 Support our campaign at <a href="https://www.indiegogo.com/projects/roguemaps-com-the-map-to-your-sustainable-treasure"><span style="color: red">IndieGoGo</span></a>
-      %p Also, Like our <a href="https://www.facebook.com/RogueMaps"><span style="color: red">Facebook page</span></a>
+      
+      
       %p Ahoy!!! Currently we arrr setting sail in the Rogue Valley in Southern Oregon. 
       %p Beginning in Ashland Oregon, we be adding new businesses as we grow. 
       %p We arrr plotting our course and swabbing the deck. If y'ad like t'e add a sustainable business, 
       %p hail the crew via the <a href="mailto:info@roguemaps.com?Subject=Hailing%20the%20crew"><span style="color: red">Contact</span></a> link above. 
       %p Meanwhile explore what there is by clicking on ye ol' spyglass below. 
+      .disclaim-footer
+        .large-5.columns
+          = link_to 'https://www.indiegogo.com/projects/roguemaps-com-the-map-to-your-sustainable-treasure', class: 'link' do
+            Support our campaign at 
+            %span IndieGoGo
+        .large-5.columns
+          = link_to 'https://www.facebook.com/RogueMaps', class: 'link' do
+            Also, Like our
+            %span Facebook page 
+      
   .large-8.small-centered.columns.row
     =form_tag search_businesses_path, method: 'get', class: 'search' do
       .large-5.columns
